# crazyflie-simulation

simulator_files/gazebo/controllers/: CMakeLists.txt  CrazyflieController.cc  CrazyflieController.hh
simulator_files/gazebo/crazyflie/: model.sdf
simulator_files/gazebo/worlds/: crazyflie_world.sdf
